vai se foder samael

--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -5,23 +5,9 @@
 
 
 	<script>
-		local function mudaNick(nome)
-			if not nome then return; end;
-			if not sheet then return; end;
-
-			if not common.isMainChar(sheet) then return; end;
-			if not common.isMyChar(sheet) then return; end;
-
-			local mesa = common.getMesa(sheet);
-			if not mesa then return; end;
-
-			if not mesa.meuJogador.isJogador then return; end;
-			if not (mesa.meuJogador.nick ~= nome) then return; end;
-
-			mesa.chat:enviarMensagem("/nick " .. nome);
-		end;
+		require('mudaNick.lua')
 	</script>
-	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome); </event></dataLink>
+	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome,sheet); </event></dataLink>
 
 
 	<tabControl align="client" name="pgcPrincipal">
