--- a/8_calendario.lfm
+++ b/8_calendario.lfm
@@ -1,19 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form name="frmGerenciador02" align="client" theme="dark" margins="{top=1}">
-	<script> 
-		<![CDATA[
-		local function write(str)
-            local mesa = Firecast.getMesaDe(sheet);
-            if str then
-                mesa.activeChat:escrever(str);
-            else
-                mesa.activeChat:escrever("String nula");
-            end;
-        end;
-		]]>	
-	</script>
-    <scrollBox align="client">
 
+    <scrollBox align="client">
     	<template name="shortTitleCenter">
 			<flowPart minWidth="20" maxWidth="50" height="15">
 				<label align="top" class="tituloCampo" fontSize="10" text="$(text)" horzTextAlign="center" wordWrap="true" textTrimming="none" autoSize="true"/>
@@ -370,7 +358,7 @@
 	    			<button left="10" top="0" width="25" height="25" text="+" hint="Novo">
 	    				<event name="onClick">
 							if sheet~=nil then
-								local meses = ndb.getChildNodes(sheet.listaMeses);
+								local meses = NDB.getChildNodes(sheet.listaMeses);
 								local num = #meses + 1;
 
 								local node = self.rclMeses:append();
@@ -426,7 +414,7 @@
 	    			<button left="10" top="0" width="25" height="25" text="+" hint="Novo">
 	    				<event name="onClick">
 							if sheet~=nil then
-								local semana = ndb.getChildNodes(sheet.listaSemana);
+								local semana = NDB.getChildNodes(sheet.listaSemana);
 								local num = #semana + 1;
 
 								local node = self.rclSemana:append();
@@ -506,7 +494,7 @@
 	    			<button left="10" top="0" width="25" height="25" text="+" hint="Novo">
 	    				<event name="onClick">
 							if sheet~=nil then
-								local estacao = ndb.getChildNodes(sheet.listaEstacoes);
+								local estacao = NDB.getChildNodes(sheet.listaEstacoes);
 								local num = #estacao + 1;
 
 								local node = self.rclEstacoes:append();
@@ -570,9 +558,8 @@
 							local ano = math.floor((tempo-1) / anoDuracao) + 1;
 							tempoRestante = tempoRestante - ((ano-1) * anoDuracao);
 
-							local meses = ndb.getChildNodes(sheet.listaMeses);
+							local meses = NDB.getChildNodes(sheet.listaMeses);
 							local mes = #meses;
-							local mesDuracao = 1;
 							local search = true;
 							local aux = 0;
 							for i=1, #meses, 1 do
@@ -637,10 +624,10 @@
 							local desvioSemana = tonumber(sheet.desvioSemana) or 0;
 							local desvioEstacao = tonumber(sheet.desvioEstacao) or 0;
 
-							local meses = ndb.getChildNodes(sheet.listaMeses);
-							local semana = ndb.getChildNodes(sheet.listaSemana); 
-							local estacoes = ndb.getChildNodes(sheet.listaEstacoes); 
-							local luas = ndb.getChildNodes(sheet.listaLuas); 
+							local meses = NDB.getChildNodes(sheet.listaMeses);
+							local semana = NDB.getChildNodes(sheet.listaSemana); 
+							local estacoes = NDB.getChildNodes(sheet.listaEstacoes); 
+							local luas = NDB.getChildNodes(sheet.listaLuas); 
 
 							-- processing date
 
@@ -695,8 +682,7 @@
 							-- defining temperatures
 							math.randomseed(tempo + seed);
 
-							local mimTemp = 0;
-							local maxTemp = 0;
+							local maxTemp = nil;
 
 							 -- The average temperature
 							local temperatures = {tonumber(estacoes[estacao].temperatura_1) or 0,tonumber(estacoes[estacao].temperatura_2) or 0,tonumber(estacoes[estacao].temperatura_3) or 0,tonumber(estacoes[estacao].temperatura_4) or 0,tonumber(estacoes[estacao].temperatura_5) or 0};
@@ -711,7 +697,7 @@
 							end;
 
 							local MinMaxTemps = {tonumber(estacoes[estacao].temperaturaMM_1) or 1,tonumber(estacoes[estacao].temperaturaMM_2) or 1,tonumber(estacoes[estacao].temperaturaMM_3) or 1,tonumber(estacoes[estacao].temperaturaMM_4) or 1,tonumber(estacoes[estacao].temperaturaMM_5) or 1};
-							local selected = 5;
+							local selected = nil;
 
 							-- Define temperature range to be used
 							local sensacao = "";
@@ -1157,6 +1143,5 @@
 				</dataLink>
 			</layout>
 		</layout>
-
     </scrollBox>
 </form>
