--- a/8_calendario.Lua.lfm
+++ b/8_calendario.Lua.lfm
@@ -21,10 +21,10 @@
 		</button>
 		<button left="220" top="0" width="25" height="25" text="X">
 			<event name="onClick">
-				dialogs.confirmOkCancel("Tem certeza que quer apagar esse mês?",
+				Dialogs.confirmOkCancel("Tem certeza que quer apagar esse mês?",
 					function (confirmado)
 						if confirmado then
-							ndb.deleteNode(sheet);
+							NDB.deleteNode(sheet);
 						end;
 				end);
 			</event>
