--- a/8_calendario.Mes.lfm
+++ b/8_calendario.Mes.lfm
@@ -14,10 +14,10 @@
 
 		<button left="195" top="0" width="25" height="25" text="X">
 			<event name="onClick">
-				dialogs.confirmOkCancel("Tem certeza que quer apagar esse mês?",
+				Dialogs.confirmOkCancel("Tem certeza que quer apagar esse mês?",
 					function (confirmado)
 						if confirmado then
-							ndb.deleteNode(sheet);
+							NDB.deleteNode(sheet);
 						end;
 				end);
 			</event>
@@ -26,9 +26,9 @@
 		<dataLink field="dias">
 			<event name="onChange"><![CDATA[               
 		        if sheet~= nil then
-					local node = ndb.getRoot(sheet);
+					local node = NDB.getRoot(sheet);
 					local mod = 0;
-					local nodes = ndb.getChildNodes(node.listaMeses); 
+					local nodes = NDB.getChildNodes(node.listaMeses); 
 					for i=1, #nodes, 1 do
 						nodes[i].cumulativo = mod;
 						mod = mod + (tonumber(nodes[i].dias) or 0);
