--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form dataType="MultiVerso_MdBe" formType="sheetTemplate" title="Ficha Mesa do Bolo" name="frmMdB" theme="dark">
+
+<form dataType="MultiVerso_MdBe" formType="sheetTemplate" title="Ficha Mesa do Bolo" name="frmMdB" theme="dark"/>
 	<import file="styles.xml"/>
 	<import file="templates.xml"/>
 
@@ -92,5 +93,5 @@
 		</tab>
 
 	</tabControl>
-	
+
 </form>
