--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -9,7 +9,7 @@
 
 
 
-	<tabControl  align = " cliente ">
+	<tabControl  align = "client">
 
 		<tabControl align="top" name="pgcPrincipal">
 
@@ -24,6 +24,7 @@
 			<tab title="EQUIPAMENTOS">
 				<import file="3_equipamento2.xml"/>
 			</tab>
+		</tabControl>
 
 		<tab title="MAGIA">
 			<import file="4_magias2.xml"/>
