--- a/Personagem.lfm
+++ b/Personagem.lfm
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<form dataType="MultiVerso_MdBe" formType="sheetTemplate" title="Ficha Mesa do Bolo" name="frmMdB" theme="dark">
+<form name="frmPersonagem" align="client" theme="dark">
 
 			<tabControl align="client">
 				<tab title="FRENTE Básicos">
