--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -6,73 +6,31 @@
 	<script>require('mudaNick.lua')</script>
 	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome,sheet); </event></dataLink>
 
-	<tabControl align="client">
-
-		<tabControl align="client" name="pgcPrincipal">
-			<tab title="FRENTE">
-				<import file="1_frente.xml"/>
-			</tab>
-			<tab title="CARACTERISTICAS">
-				<import file="2_caracteristicas.xml"/>
-			</tab>
-			<tab title="EQUIPAMENTOS">
-				<import file="3_equipamento2.xml"/>
-			</tab>
-		</tabControl>
-
-		<tab title="MAGIA">
-			<import file="4_magias2.xml"/>
+	<tabControl align="client" name="pgcPrincipal">
+	
+		<tab title="Frente">
+			<import file="frente.xml"/>
 		</tab>
 
-		<tab title="CONTADORES">
-			<import file="5_contadores.xml"/>
+		<tab title="Equipamento">
+			<import file="equipamento2.xml"/>
 		</tab>
 
-		<tab title="PROPRIEDADES">
-			<import file="6_propriedades.xml"/>
+		<tab title="Magias">
+			<import file="magias.xml"/>
 		</tab>
 
-		<tab title="DIARIO DE CAMPANHA">
+		<tab title="Contadores">
+			<import file="contadores.xml"/>
+		</tab>
+
+		<tab title="Historia">
+			<import file="historia.xml"/>
+		</tab>
+
+		<tab title="Díario de campanha">
 			<rectangle class="fundo">
-					<checkBox align="right" width="15" field="historia.usarEditorFancy" margins="{left = 2, right = -2}">
-						<event name="onChange">
-							if sheet then
-								self.historiaFancy:setVisible(sheet.historia.usarEditorFancy);
-								self.historiaMerda:setVisible(not (sheet.historia.usarEditorFancy));
-							end;
-						</event>
-					</checkBox>
-					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
-					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
-			</rectangle>
-		</tab>
-
-		<tab title="CALENDARIO">
-			<import file="8_calendario.lfm"/>
-		</tab>
-
-		<tab title="COMPANHEIRO">
-			<import file="10_companion.xml"/>
-		</tab>
-
-		<tab title="COMPANHEIRO ANOTAÇÕES">
-			<rectangle class="fundo">
-				<checkBox align="right" width="15" field="companion.anotacoes_melhorado">
-					<event name="onChange">
-						if sheet then
-							self.companionanotacoesFancy:setVisible(sheet.companion.anotacoes_melhorado);
-							self.companionanotacoesMerda:setVisible(not (sheet.companion.anotacoes_melhorado));
-						end;
-					</event>
-				</checkBox>
-				<richEdit name="companionanotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="companionanotacoesMerda" align="client" field="companion.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
-			</rectangle>
-		</tab>
-
-		<tab title="ANOTAÇÕES EXTRAS">
-			<rectangle class="fundo">
-				<checkBox align="right" width="15" field="outros.anotacoes_melhorado">
+				<checkBox align="right" width="15" field="outros.diariodecampanha">
 					<event name="onChange">
 						if sheet then
 							self.anotacoesFancy:setVisible(sheet.outros.anotacoes_melhorado);
@@ -85,10 +43,9 @@
 			</rectangle>
 		</tab>
 
-		<tab title="CREDITOS">
-			<import file="13_creditos.xml"/>
+		<tab title="Anotações">
+			<import file="anotacoes.lfm"/>
 		</tab>
 
-		</tabControl>
 	</tabControl>
 </form>
