--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -8,19 +8,23 @@
 
 	<tabControl align="client" name="pgcPrincipal">
 	
-		<tab title="Frente">
+		<tab title="FRENTE">
 			<import file="1_frente.xml"/>
 		</tab>
 
-		<tab title="Equipamento">
-			<import file="equipamento2.xml"/>
+		<tab title="CARACTERISTICAS">
+			<import file="2_frente.xml"/>
 		</tab>
 
-		<tab title="Magias">
-			<import file="magias.xml"/>
+		<tab title="EQUIPAMENTO">
+			<import file="3_equipamento2.xml"/>
 		</tab>
 
-		<tab title="Contadores">
+		<tab title="MAGICA">
+			<import file="magias2.xml"/>
+		</tab>
+
+		<tab title="CONTADORES">
 			<import file="contadores.xml"/>
 		</tab>
 
