--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -6,73 +6,6 @@
 	<script>require('mudaNick.lua')</script>
 	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome,sheet); </event></dataLink>
 
-	<tabControl align="client">
-
-		<tabControl align="client" name="pgcPrincipal">
-
-			<tab title="FRENTE">
-				<import file="1_frente.xml"/>
-			</tab>
-
-			<tab title="CARACTERISTICAS">
-				<import file="2_caracteristicas.xml"/>
-			</tab>
-
-			<tab title="EQUIPAMENTOS">
-				<import file="3_equipamento2.xml"/>
-			</tab>
-
-		<tab title="MAGIA">
-			<import file="4_magias2.xml"/>
-		</tab>
-
-		<tab title="CONTADORES">
-			<import file="5_contadores.xml"/>
-		</tab>
-
-		<tab title="PROPRIEDADES">
-			<import file="6_propriedades.xml"/>
-		</tab>
-
-		<tab title="DIARIO DE CAMPANHA">
-			<rectangle class="fundo">
-					<checkBox align="right" width="15" field="historia.usarEditorFancy" margins="{left = 2, right = -2}">
-						<event name="onChange">
-							if sheet then
-								self.historiaFancy:setVisible(sheet.historia.usarEditorFancy);
-								self.historiaMerda:setVisible(not (sheet.historia.usarEditorFancy));
-							end;
-						</event>
-					</checkBox>
-					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
-					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
-			</rectangle>
-		</tab>
-
-		<tab title="CALENDARIO">
-			<import file="8_calendario.lfm"/>
-		</tab>
-
-		<tab title="COMPANHEIRO">
-			<import file="10_companion.xml"/>
-		</tab>
-
-
-
-		</tabControl>
-	</tabControl>
-</form>
-
-
-
-<?xml version="1.0" encoding="UTF-8"?>
-<form dataType="MultiVerso_MdBe" formType="sheetTemplate" title="Ficha Mesa do Bolo" name="frmMdB" theme="dark">
-	<import file="styles.xml"/>
-	<import file="templates.xml"/>
-
-	<script>require('mudaNick.lua')</script>
-	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome,sheet); </event></dataLink>
-
 	<tabControl align="client" name="pgcPrincipal">
 	
 		<tab title="FRENTE">
@@ -80,7 +13,7 @@
 		</tab>
 
 		<tab title="CARACTERISTICAS">
-			<import file="2_frente.xml"/>
+			<import file="2_caracteristicas.xml"/>
 		</tab>
 
 		<tab title="EQUIPAMENTO">
@@ -107,11 +40,11 @@
 		</tab>
 
 		<tab title="CALENDARIO">
-			<import file="calendario.xml"/>
+			<import file="8_calendario.xml"/>
 		</tab>
 
 		<tab title="COMPANION">
-			<import file="companion.lfm"/>
+			<import file="10_companion.lfm"/>
 		</tab>
 
 		<tab title="COMPANHEIRO ANOTAÇÕES">
