--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -44,7 +44,7 @@
 		</tab>
 
 		<tab title="COMPANION">
-			<import file="10_companion.lfm"/>
+			<import file="10_companion.xml"/>
 		</tab>
 
 		<tab title="COMPANHEIRO ANOTAÇÕES">
