--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -6,36 +6,46 @@
 	<script>require('mudaNick.lua')</script>
 	<dataLink field="nome"><event name="onChange"> mudaNick(sheet.nome,sheet); </event></dataLink>
 
-	<tabControl align="client" name="pgcPrincipal">
-	
-		<tab title="FRENTE">
-			<import file="1_frente.xml"/>
-		</tab>
+	<tabControl align="client">
 
-		<tab title="CARACTERISTICAS">
-			<import file="2_caracteristicas.xml"/>
-		</tab>
+		<tabControl align="client" name="pgcPrincipal">
 
-		<tab title="EQUIPAMENTO">
-			<import file="3_equipamento2.xml"/>
-		</tab>
+			<tab title="FRENTE">
+				<import file="1_frente.xml"/>
+			</tab>
 
-		<tab title="MAGICA">
+			<tab title="CARACTERISTICAS">
+				<import file="2_caracteristicas.xml"/>
+			</tab>
+
+			<tab title="EQUIPAMENTOS">
+				<import file="3_equipamento2.xml"/>
+			</tab>
+
+		<tab title="MAGIA">
 			<import file="4_magias2.xml"/>
 		</tab>
 
-		<tab title="DÍARIO DE CAMPANHA">
+		<tab title="CONTADORES">
+			<import file="5_contadores.xml"/>
+		</tab>
+
+		<tab title="PROPRIEDADES">
+			<import file="6_propriedades.xml"/>
+		</tab>
+
+		<tab title="DIARIO DE CAMPANHA">
 			<rectangle class="fundo">
-				<checkBox align="right" width="15" field="outros.diariodecampanha">
-					<event name="onChange">
-						if sheet then
-							self.anotacoesFancy:setVisible(sheet.outros.anotacoes_melhorado);
-							self.anotacoesMerda:setVisible(not (sheet.outros.anotacoes_melhorado));
-						end;
-					</event>
-				</checkBox>
-				<richEdit name="anotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
+					<checkBox align="right" width="15" field="historia.usarEditorFancy" margins="{left = 2, right = -2}">
+						<event name="onChange">
+							if sheet then
+								self.historiaFancy:setVisible(sheet.historia.usarEditorFancy);
+								self.historiaMerda:setVisible(not (sheet.historia.usarEditorFancy));
+							end;
+						</event>
+					</checkBox>
+					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
+					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
 			</rectangle>
 		</tab>
 
@@ -43,7 +53,7 @@
 			<import file="8_calendario.lfm"/>
 		</tab>
 
-		<tab title="COMPANION">
+		<tab title="COMPANHEIRO">
 			<import file="10_companion.xml"/>
 		</tab>
 
@@ -77,17 +87,10 @@
 			</rectangle>
 		</tab>
 
-		<tab title="CONTADORES">
-			<import file="5_contadores.xml"/>
-		</tab>
-
-		<tab title="PROPRIEDADES">
-			<import file="6_propriedades.xml"/>
-		</tab>
-
 		<tab title="CREDITOS">
 			<import file="13_creditos.xml"/>
 		</tab>
 
+		</tabControl>
 	</tabControl>
 </form>
