--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -98,102 +98,12 @@
 	<layout align="right" width="333">
 		<layout align="left" width="184">
 			<layout align="left" width="152" margins="{left=2}">
-				<comboBox name="cbResetTime" align="top" height="30" items="{'Descanso Curto', 'Descanso Longo'}" field="selectedResetTime"/>
-				<comboBox name="cbResetVal"  align="top" height="30" items="{'Não Muda', 'Completa', 'Recupera Metade (⌃)', 'Recupera Metade (⌄)', 'Muda em', 'Muda para'}" field="selectedResetVal" enabled="false"/>
+				<comboBox name="cbBarChoose" align="top" height="30" items="{'Barra 2', 'Barra 3', 'Barra 4'}" values={'2','3','4'} field="selectedResetTime"/>
+				<dataLink fields={'cbBarChoose','valMax','valCur'}>
+					<event name='onChange'>
+						enviar(valCur .. "/" .. valMax)
+					</event>
+				</datalink>
 			</layout>
-			<edit name="editResetVal" align="left" margins="{left=2}" width="30" field="selectedResetVal2" enabled="false"/>
 		</layout>
-
-		<dataLink field="resetsDescanso Curto" defaultValue="Não Muda"/>
-		<dataLink field="resetsDescanso Curto2" defaultValue=""/>
-		<dataLink field="resetsDescanso Longo" defaultValue="Não Muda"/>
-		<dataLink field="resetsDescanso Longo2" defaultValue=""/>
-		<dataLink field="selectedResetTime" defaultValue="Descanso Curto"><event name="onChange">
-			if sheet.selectedResetTime ~= nil then
-				self.cbResetVal:setEnabled(true);
-				sheet.selectedResetVal = sheet["resets"..sheet.selectedResetTime];
-				sheet.selectedResetVal2 = sheet["resets"..sheet.selectedResetTime .. "2"];
-				if (sheet.selectedResetVal == "Muda em") or (sheet.selectedResetVal == "Muda para") then
-					self.editResetVal:setEnabled(true);
-				else
-					self.editResetVal:setEnabled(false);
-				end;
-			else
-				self.cbResetVal:setEnabled(false);
-				self.editResetVal:setEnabled(false);
-			end;
-		</event></dataLink>
-		<dataLink field="selectedResetVal" defaultValue="Não Muda"><event name="onChange">
-			if sheet.selectedResetTime ~= nil then
-				sheet["resets"..sheet.selectedResetTime] = sheet.selectedResetVal;
-				if (sheet.selectedResetVal == "Muda em") or (sheet.selectedResetVal == "Muda para") then
-					self.editResetVal:setEnabled(true);
-				else
-					self.editResetVal:setEnabled(false);
-				end;
-			else
-				self.cbResetVal:setEnabled(false);
-				self.editResetVal:setEnabled(false);
-			end;
-		</event></dataLink>
-		<dataLink field="selectedResetVal2" defaultValue=""><event name="onChange">
-			if sheet.selectedResetTime ~= nil then
-				if (sheet.selectedResetVal == "Muda em") or (sheet.selectedResetVal == "Muda para") then
-					sheet["resets"..sheet.selectedResetTime .. "2"] = sheet.selectedResetVal2;
-				else
-					self.editResetVal:setEnabled(false);
-				end;
-			else
-				self.cbResetVal:setEnabled(false);
-				self.editResetVal:setEnabled(false);
-			end;
-		</event></dataLink>
-
-
-		<button name="btnDelete" align="left" margins="{left=2}" width="25" text="✖" onClick="askForDelete();" onMenu="NDB.deleteNode(sheet)"/>
-	</layout>
-
-
-	<dataLink fields="{'descansoCurto','descansoLongo'}">
-		<event name="onChange">
-			if (sheet.descansoCurto == true) or (sheet.descansoLongo == true) then
-				local resetVal, resetVal2;
-				if (sheet.descansoCurto == true) then
-					resetVal = sheet["resetsDescanso Curto"];
-					resetVal2 = sheet["resetsDescanso Curto2"];
-				elseif (sheet.descansoLongo == true) then
-					resetVal = sheet["resetsDescanso Longo"];
-					resetVal2 = sheet["resetsDescanso Longo2"];
-				end;
-				if resetVal == "Completa" then
-					sheet.valCur = sheet.valMax;
-				elseif resetVal == "Recupera Metade (⌃)" then
-					sheet.valCur = math.min(sheet.valMax, sheet.valCur + math.ceil(sheet.valMax/2));
-				elseif resetVal == "Recupera Metade (⌄)" then
-					sheet.valCur = math.min(sheet.valMax, sheet.valCur + math.floor(sheet.valMax/2));
-				elseif resetVal == "Muda em" or resetVal == "Muda para" then
-					if not (resetVal == "Muda em" and sheet.valCur == sheet.valMax) then
-						local rolagem = Firecast.interpretarRolagem(common.interpreta(common.getTopNode(sheet), resetVal2));
-						if not rolagem.possuiAlgumDado then
-							rolagem = Firecast.interpretarRolagem("1d1-1"):concatenar(rolagem);
-							rolagem:rolarLocalmente();
-							if resetVal == "Muda em" then
-								sheet.valCur = math.min(sheet.valMax, sheet.valCur + rolagem.resultado);
-							else
-								sheet.valCur = rolagem.resultado;
-							end;
-						else
-							common.getMesa(sheet).chat:rolarDados(rolagem, sheet.name, function(arolagem)
-								if resetVal == "Muda em" then
-									sheet.valCur = math.min(sheet.valMax, sheet.valCur + arolagem.resultado);
-								else
-									sheet.valCur = arolagem.resultado;
-								end;
-							end);
-						end;
-					end;
-				end;
-			end;
-		</event>
-	</dataLink>
 </form>
