--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -101,9 +101,10 @@
 				<comboBox name="cbBarChoose" align="top" height="30" items="{'Barra 2', 'Barra 3', 'Barra 4'}" values={'2','3','4'} field="selectedResetTime"/>
 				<dataLink fields={'cbBarChoose','valMax','valCur'}>
 					<event name='onChange'>
-						enviar(valCur .. "/" .. valMax)
+						Dialogs.confirmYesNo(valCur .. "/" .. valMax)
 					</event>
 				</datalink>
 			</layout>
 		</layout>
+	</layout>
 </form>
