--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -98,10 +98,14 @@
 	<layout align="right" width="333">
 		<layout align="left" width="184">
 			<layout align="left" width="152" margins="{left=2}">
-				<comboBox name="cbBarChoose" align="top" height="30" items="{'Barra 2', 'Barra 3', 'Barra 4'}" values={'2','3','4'} field="selectedResetTime"/>
+				<comboBox name="cbBarChoose" align="top" height="30" items="{'Barra 2', 'Barra 3', 'Barra 4'}" values={'2','3','4'} field="cbBarChoose"/>
 				<dataLink fields={'cbBarChoose','valMax','valCur'}>
-					<event name='onChange'>
-						Dialogs.confirmYesNo(valCur .. "/" .. valMax)
+					<event name="onChange">
+						Dialogs.confirmYesNo(valCur .. "/" .. valMax.."?",function (confirmado)
+										if confirmado then
+											enviar(valCur.."/"..valMax)
+										end;
+									 end);
 					</event>
 				</datalink>
 			</layout>
