--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -98,7 +98,7 @@
 	<layout align="right" width="333">
 		<layout align="left" width="184">
 			<layout align="left" width="152" margins="{left=2}">
-				<comboBox name="cbBarChoose" align="top" height="30" items="{'Barra 2', 'Barra 3', 'Barra 4'}" values="{'2','3','4'}" field="cbBarChoose"/>
+				<comboBox name="cbBarChoose" align="top" height="30" items="{'Não usar','Barra 2', 'Barra 3', 'Barra 4'}" values="{'','2','3','4'}" field="cbBarChoose"/>
 				<dataLink fields="{'cbBarChoose','valMax','valCur'}">
 					<event name="onChange">
 						Dialogs.confirmYesNo(valCur .. "/" .. valMax.."?",function (confirmado)
