--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -98,14 +98,15 @@
 	<layout align="right" width="333">
 		<layout align="left" width="184">
 			<layout align="left" width="152" margins="{left=2}">
-				<comboBox name="cbBarChoose" align="top" height="30" items="{'Não usar','Barra 2', 'Barra 3', 'Barra 4'}" values="{'','2','3','4'}" field="cbBarChoose"/>
-				<dataLink fields="{'cbBarChoose','valMax','valCur'}">
+				<comboBox name="cbBarChoose" align="top" height="30" items="{'Não usar','Barra 2', 'Barra 3', 'Barra 4'}" values="{nil,'2','3','4'}" field="BarChoose"/>
+				<dataLink fields="{'BarChoose','valMax','valCur'}">
 					<event name="onChange">
-						Dialogs.confirmYesNo(valCur .. "/" .. valMax.."?",function (confirmado)
-										if confirmado then
-											enviar(valCur.."/"..valMax)
-										end;
-									 end);
+						if sheet.cbBarChoose = nil then
+							return;
+						else
+							local jogador = Firecast.getPersonagemDe(sheet).dono;
+							if common.isMyChar(sheet) and common.isMainChar(sheet) then jogador:requestSetBarValue(sheet.BarChoose, sheet.valCur, sheet.valMax);
+						end;
 					</event>
 				</dataLink>
 			</layout>
