--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -101,7 +101,7 @@
 				<comboBox name="cbBarChoose" align="top" height="30" items="{'Não usar','Barra 2', 'Barra 3', 'Barra 4'}" values="{nil,'2','3','4'}" field="BarChoose"/>
 				<dataLink fields="{'BarChoose','valMax','valCur'}">
 					<event name="onChange">
-						if sheet.cbBarChoose = nil then
+						if sheet.cbBarChoose == nil then
 							return;
 						else
 							local jogador = Firecast.getPersonagemDe(sheet).dono;
