--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -38,24 +38,26 @@
 		ficha.contadoresMudaram = false;
 	</event></dataLink>
 	<dataLink field="valPrev" defaultValue="0"/>
-	<dataLink field="valCur" defaultValue="0"><event name="onChange">
-		<![CDATA[
-			if sheet.valCur == nil then sheet.valCur = 0; end;
-			if sheet.valPrev == nil then sheet.valPrev = sheet.valCur; end;
+	<dataLink field="valCur" defaultValue="0">
+		<event name="onChange">
+			<![CDATA[
+				if sheet.valCur == nil then sheet.valCur = 0; end;
+				if sheet.valPrev == nil then sheet.valPrev = sheet.valCur; end;
 
-			if sheet.valCur < 0 then sheet.valCur = sheet.valCur + sheet.valPrev; end;
+				if sheet.valCur < 0 then sheet.valCur = sheet.valCur + sheet.valPrev; end;
 
-			if sheet.valCur > sheet.valPrev then
-				common.getMesa(sheet).chat:enviarAcao("recuperou " .. sheet.valCur-sheet.valPrev .. " uso(s) de '" .. sheet.name .. "' (" .. sheet.valCur .. "/" .. sheet.valMax .. ")");
-			elseif sheet.valCur < sheet.valPrev then
-				common.getMesa(sheet).chat:enviarAcao("gastou " .. sheet.valPrev-sheet.valCur .. " uso(s) de '" .. sheet.name .. "' (" .. sheet.valCur .. "/" .. sheet.valMax .. ")");
-				if sheet.rolagem then
-					common.getMesa(sheet).chat:rolarDados(common.interpreta(sheet, sheet.rolagem), sheet.name);
+				if sheet.valCur > sheet.valPrev then
+					common.getMesa(sheet).chat:enviarAcao("recuperou " .. sheet.valCur-sheet.valPrev .. " uso(s) de '" .. sheet.name .. "' (" .. sheet.valCur .. "/" .. sheet.valMax .. ")");
+				elseif sheet.valCur < sheet.valPrev then
+					common.getMesa(sheet).chat:enviarAcao("gastou " .. sheet.valPrev-sheet.valCur .. " uso(s) de '" .. sheet.name .. "' (" .. sheet.valCur .. "/" .. sheet.valMax .. ")");
+					if sheet.rolagem then
+						common.getMesa(sheet).chat:rolarDados(common.interpreta(sheet, sheet.rolagem), sheet.name);
+					end;
 				end;
-			end;
-			sheet.valPrev = sheet.valCur;
-		]]>
-	</event></dataLink>
+				sheet.valPrev = sheet.valCur;
+			]]>
+		</event>
+	</dataLink>
 	<dataLink field="valMax" defaultValue="100"><event name="onChange">
 		<![CDATA[
 			if sheet.valMax == nil then sheet.valMax = 100; end;
@@ -105,7 +107,7 @@
 							return;
 						else
 							local jogador = Firecast.getPersonagemDe(sheet).dono;
-							if common.isMyChar(sheet) and common.isMainChar(sheet) then jogador:requestSetBarValue(sheet.barChoose, sheet.valCur, sheet.valMax); end;
+							if common.isMyChar(sheet) and common.isMainChar(sheet) then jogador:requestSetBarValue(sheet.contadores.barChoose, sheet.valCur, sheet.valMax); end;
 						end;
 					</event>
 				</dataLink>
