--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -101,7 +101,7 @@
 		<layout align="left" width="184">
 			<layout align="left" width="152" margins="{left=2}">
 				<comboBox name="cbBarChoose" align="top" height="30" items="{'','Barra 2', 'Barra 3', 'Barra 4'}" values="{nil,'2','3','4'}" field="barChoose"/>
-				<dataLink fields="{'barChoose','valMax','valCur'}">
+				<dataLink fields="{'valMax','valCur'}">
 					<event name="onChange">
 						if sheet.barChoose == nil then
 							return;
