--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -107,8 +107,10 @@
 							return;
 						else
 							local jogador = Firecast.getPersonagemDe(sheet).dono;
+							local bar = tonumber(sheet.barChoose)
+							sheet.barChoose = bar
 							if common.isMyChar(sheet) and common.isMainChar(sheet) then 
-								jogador:requestSetBarValue(tonumber(sheet.barChoose), sheet.valCur, sheet.valMax); 
+								jogador:requestSetBarValue(bar, sheet.valCur, sheet.valMax); 
 							end;
 						end;
 					</event>
