--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -110,6 +110,9 @@
 							local bar = tonumber(sheet.barChoose)
 							if common.isMyChar(sheet) and common.isMainChar(sheet) then 
 								jogador:requestSetBarValue(bar, sheet.valCur, sheet.valMax); 
+								local curBar, maxBar = jogador:getBarValue(index);
+								sheet.valCur = curBar;
+								sheet.valMax = maxBar;
 							end;
 						end;
 					</event>
