--- a/propriedadeItem.lfm
+++ b/propriedadeItem.lfm
@@ -3,15 +3,20 @@
 	<import file='templates.xml'/>
 	<import file='styles.xml'/>
 
-	<button align='left' width='25' text='✖'><event name='onClick'>
-		Dialogs.confirmYesNo('Você tem certeza que deseja remover essa propriedade?', function(confirmado) if confirmado then
-			local ficha = common.getTopNode(sheet);
-			ficha.propriedades[sheet.id] = nil;
-			ficha.propriedades.alterou = sheet.id;
-			ficha.propriedades.alterou = nil;
-			NDB.deleteNode(self.sheet);
-		end; end);
-	</event></button>
+	<button align='left' width='25' text='✖'>
+		<event name='onClick'>
+			Dialogs.confirmYesNo('Você tem certeza que deseja remover essa propriedade?', 
+			function(confirmado) 
+				if confirmado then
+					local ficha = common.getTopNode(sheet);
+					ficha.propriedades[sheet.id] = nil;
+					ficha.propriedades.alterou = sheet.id;
+					ficha.propriedades.alterou = nil;
+					NDB.deleteNode(self.sheet);
+				end;
+			end);
+		</event>
+	</button>
 	<flowLayout class='tile' name='flOutter' avoidScale='true' 
 				autoHeight='true' vertAlign='trailing' align='client' 
 				lineSpacing='2' horzAlign='leading'>
