--- a/contadoresItem.lfm
+++ b/contadoresItem.lfm
@@ -116,4 +116,7 @@
 		</layout>
 	</layout>
 
+	<layout align="right" width="30">
+		<button name="btnDelete" align="right" margins="{left=2}" width="25" text="✖" onClick="askForDelete();" onMenu="NDB.deleteNode(sheet)"/>
+	</layout>
 </form>
