--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -42,7 +42,7 @@
 							end;
 						</event>
 					</checkBox>
-					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" backgroundColor="#333333" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
+					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
 					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
 			</rectangle>
 		</tab>
@@ -65,7 +65,7 @@
 						end;
 					</event>
 				</checkBox>
-				<richEdit name="companionanotacoesFancy" align="client" backgroundColor="#333333" defaultFontColor="white" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
+				<richEdit name="companionanotacoesFancy" align="client" defaultFontColor="white" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
 				margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
 				<textEditor name="companionanotacoesMerda" align="client" field="companion.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
