--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -73,16 +73,7 @@
 
 		<tab title="ANOTAÇÕES">
 			<rectangle class="fundo">
-				<checkBox align="right" width="15" field="outros.anotacoes_melhorado">
-					<event name="onChange">
-						if sheet then
-							self.anotacoesFancy:setVisible(sheet.outros.anotacoes_melhorado);
-							self.anotacoesMerda:setVisible(not (sheet.outros.anotacoes_melhorado));
-						end;
-					</event>
-				</checkBox>
-				<richEdit name="anotacoesFancy" align="client" defaultFontColor="white" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
+				<textEditor name="anotacoesFancy" align="client" field="outros.anotacoes2" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
 
