--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -42,7 +42,7 @@
 							end;
 						</event>
 					</checkBox>
-					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" defaultFontColor="white" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
+					<richEdit name="historiaFancy" align="client" field="historia.texto2" class="transparente" hideSelection="false" defaultFontSize="16" animateImages="true" margins="{top=2}" visible="false"/>
 					<textEditor name="historiaMerda" align="client" field="historia.texto" class="transparente" margins="{top=2}" fontSize="16" visible="true"/>
 			</rectangle>
 		</tab>
@@ -57,7 +57,7 @@
 
 		<tab title="C.ANOTAÇÕES">
 			<rectangle class="fundo" align="client" strokeColor="white" strokeSize="1">
-				<richEdit name="companionanotacoesFancy" align="client" defaultFontColor="white" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
+				<richEdit name="companionanotacoesFancy" align="client" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
 				margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
 			</rectangle>
 		</tab>
@@ -72,7 +72,7 @@
 						end;
 					</event>
 				</checkBox>
-				<richEdit name="anotacoesFancy" align="client" defaultFontColor="white" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
+				<richEdit name="anotacoesFancy" align="client" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
 				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes2" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
