--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -73,7 +73,7 @@
 					</event>
 				</checkBox>
 				<richEdit name="anotacoesFancy" align="client" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes2" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
+				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes2" class="transparente"  backgroundColor="#333333" margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
 
