--- a/fichaMdB.lfm
+++ b/fichaMdB.lfm
@@ -57,23 +57,13 @@
 
 		<tab title="C.ANOTAÇÕES">
 			<rectangle class="fundo" align="client" strokeColor="white" strokeSize="1">
-				<richEdit name="companionanotacoesFancy" align="client" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" 
-				margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
+				<richEdit name="companionanotacoesFancy" align="client" field="companion.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
 			</rectangle>
 		</tab>
 
 		<tab title="ANOTAÇÕES">
 			<rectangle class="fundo" align="client" strokeColor="white" strokeSize="1">
-				<checkBox align="right" width="15" field="outros.anotacoes_melhorado">
-					<event name="onChange">
-						if sheet then
-							self.anotacoesFancy:setVisible(sheet.outros.anotacoes_melhorado);
-							self.anotacoesMerda:setVisible(not (sheet.outros.anotacoes_melhorado));
-						end;
-					</event>
-				</checkBox>
 				<richEdit name="anotacoesFancy" align="client" field="outros.anotacoes2" hideSelection="false" defaultFontSize="15" animateImages="true" margins="{left=2, right=2, top=2, bottom=2}" visible="false"/>
-				<textEditor name="anotacoesMerda" align="client" field="outros.anotacoes2" class="transparente"  backgroundColor="#333333" margins="{left=2, right=2, top=2, bottom=2}" visible="true"/>
 			</rectangle>
 		</tab>
 
